# city-is-ogre

./: Cargo.toml
src/: core.rs  generated_characters.ron  inventory.rs  main.rs  test.rs  util.rs
src/character/: character.rs  stats.rs
src/core/: background.rs  character.rs  combat.rs  creation.rs  input.rs  menu.rs  spacetime.rs  stats.rs
src/data/: background_db.ron  character_db.ron
src/renderer/: engine.rs
src/sentience/: action.rs
src/util/: asset_loader.rs  asset_writer.rs
