[package]
name = "ogre-romance"
version = "0.1.0"
authors = ["Christopher Quion <chrischrisquion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "*"
enum-map-derive = "*"
legion = "0.4.0"
strum = "0.20"
strum_macros = "0.20"
serde = "1.0.125"
ron = "0.6.4"